[project]
name = "langent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain==1.2.3",
    "langchain-community==0.4.1",
    "langchain-core==1.2.17",
    "langchain-experimental>=0.4.1",
    "langchain-openai==1.1.7",
    "langgraph==1.0.5",
    "markdown>=3.10.2",
    "modelscope>=1.35.4",
    "pdfplumber>=0.11.9",
    "pypdf>=6.10.0",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "python-markdown>=0.1.0",
    "sentence-transformers>=5.4.0",
    "torch>=2.11.0",
    "transformers>=5.5.3",
    "unstructured>=0.22.18",
]
